tests/bad/expr-statements/if_missing_yield.ae
/// fail: Must yield a value here

def main() {
    let x = if 3 > 5 {
        yield 10
    } else {
        // nope
    }
}